@@ -32,7 +32,7 @@ cleanup.remove_private_constructors=true
 cleanup.remove_trailing_whitespaces=true
 cleanup.remove_trailing_whitespaces_all=true
 cleanup.remove_trailing_whitespaces_ignore_empty=false
-cleanup.remove_unnecessary_casts=true
+cleanup.remove_unnecessary_casts=false
 cleanup.remove_unnecessary_nls_tags=true
 cleanup.remove_unused_imports=true
 cleanup.remove_unused_local_variables=true
@@ -91,7 +91,7 @@ sp_cleanup.remove_private_constructors=true
 sp_cleanup.remove_trailing_whitespaces=true
 sp_cleanup.remove_trailing_whitespaces_all=true
 sp_cleanup.remove_trailing_whitespaces_ignore_empty=false
-sp_cleanup.remove_unnecessary_casts=true
+sp_cleanup.remove_unnecessary_casts=false
 sp_cleanup.remove_unnecessary_nls_tags=false
 sp_cleanup.remove_unused_imports=true
 sp_cleanup.remove_unused_local_variables=false
