@@ -1,0 +1,2 @@
+-- invalid first argument
+SELECT array_contains(1, 2) FROM src LIMIT 1;
