@@ -1,0 +1,1 @@
+FAILED: Error in semantic analysis: line 2:22 Argument Type Mismatch 1: "array" expected at function ARRAY_CONTAINS, but "int" is found
