@@ -1,0 +1,1 @@
+FAILED: Error in semantic analysis: line 2:38 Argument Type Mismatch '2': "int" expected at function ARRAY_CONTAINS, but "string" is found
