@@ -22,6 +22,7 @@ abs
 acos
 and
 array
+array_contains
 ascii
 asin
 avg
