@@ -90,6 +90,9 @@ Trunk -  Unreleased
     HIVE-1397. histogram_numeric UDAF
     (Mayank Lahiri via jvs)
 
+    HIVE-1179. Add UDF array_contains
+    (Arvind Prabhakar via namit)
+
   IMPROVEMENTS
     HIVE-983. Function from_unixtime takes long.
     (Ning Zhang via zshao)
